Usage for virtual threads -> faster media loading