@@ -7,7 +7,7 @@
 
     <groupId>org.photoslide</groupId>
     <artifactId>PhotoSlide</artifactId>
-    <version>1.2.25</version>   
+    <version>1.3.0</version>   
 
     <!-- This description text is included in the Windows installer by default, see win-jpackage.txt -->
     <description>Photoslide is an app for managing and editing photos like Lightroom/ON1/...</description>
@@ -18,10 +18,10 @@
         <app.name>Photoslide</app.name>        
         <maven.build.timestamp.format>yy.ww.WWkkmm</maven.build.timestamp.format>
         <app.version>${project.version}</app.version>        
-        <jvm.modules>java.base,jdk.management,java.naming,java.sql,java.transaction.xa,java.xml,jdk.unsupported,java.management,java.datatransfer,java.desktop,java.security.jgss,java.xml.crypto,jdk.javadoc,javafx.media,javafx.controls,javafx.fxml,javafx.graphics,javafx.base,javafx.swing,javafx.web,java.logging,jdk.charsets,jdk.incubator.foreign,java.net.http,java.prefs,jdk.crypto.ec,jdk.crypto.cryptoki,jdk.localedata,java.compiler,jdk.net,java.instrument,java.scripting,java.rmi</jvm.modules>
+        <jvm.modules>java.base,jdk.management,java.naming,java.sql,java.transaction.xa,java.xml,jdk.unsupported,java.management,java.datatransfer,java.desktop,java.security.jgss,java.xml.crypto,jdk.javadoc,javafx.media,javafx.controls,javafx.fxml,javafx.graphics,javafx.base,javafx.swing,javafx.web,java.logging,jdk.charsets,java.se,java.net.http,java.prefs,jdk.crypto.ec,jdk.crypto.cryptoki,jdk.localedata,java.compiler,jdk.net,java.instrument,java.scripting,java.rmi</jvm.modules>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>18</maven.compiler.source>
-        <maven.compiler.target>18</maven.compiler.target> 
+        <maven.compiler.source>19</maven.compiler.source>
+        <maven.compiler.target>19</maven.compiler.target> 
         <!-- UUID via https://www.uuidgenerator.net -->
         <windows.upgrade.uuid>5be0a831-ee20-4692-8c71-6616381d9ccf</windows.upgrade.uuid>        
         <windows.vendor>ITArchitects</windows.vendor>        
@@ -199,12 +199,12 @@
         <dependency>
             <groupId>org.librawfx</groupId>
             <artifactId>LibRawFX</artifactId>
-            <version>1.8.0</version>
+            <version>1.8.1</version>
         </dependency>
         <dependency>  
             <groupId>org.libheiffx</groupId>    
             <artifactId>LibHeifFX</artifactId>  
-            <version>1.1.9</version>  
+            <version>1.2.0</version>  
         </dependency>
         <dependency>
             <groupId>com.sothawo</groupId>
@@ -363,8 +363,9 @@
                             <mainClass>${mainClass}</mainClass>
                             <options>                                                                     
                                 <option>-XX:+UseZGC</option>
+                                <option>--enable-preview</option>
                                 <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>                        
-                                <option>--add-modules jdk.incubator.foreign --enable-native-access=ALL-UNNAMED</option>                                        
+                                <option>--add-modules java.se --enable-native-access=ALL-UNNAMED</option>                                        
                                 <option>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</option>                                        
                                 <option>--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED</option>                                                                                  
                                 <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>                                                                                
@@ -387,8 +388,9 @@
                             <options>                                     
                                 <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:8000</option>                                    
                                 <option>-XX:+UseZGC</option>
+                                <option>--enable-preview</option>
                                 <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>                        
-                                <option>--add-modules jdk.incubator.foreign --enable-native-access=ALL-UNNAMED</option>                                        
+                                <option>--add-modules java.se --enable-native-access=ALL-UNNAMED</option>                                        
                                 <option>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</option>                                        
                                 <option>--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED</option>                                                                                  
                                 <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>                                                                                
@@ -411,8 +413,9 @@
                             <options>                                     
                                 <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>                                    
                                 <option>-XX:+UseZGC</option>
+                                <option>--enable-preview</option>
                                 <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>                        
-                                <option>--add-modules jdk.incubator.foreign --enable-native-access=ALL-UNNAMED</option>                                        
+                                <option>--add-modules java.se --enable-native-access=ALL-UNNAMED</option>                                        
                                 <option>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</option>                                        
                                 <option>--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED</option>                                                                                  
                                 <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>                                                                                
@@ -434,8 +437,9 @@
                             <mainClass>${mainClass}</mainClass>
                             <options>
                                 <option>-XX:+UseZGC</option>
+                                <option>--enable-preview</option>
                                 <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>                        
-                                <option>--add-modules jdk.incubator.foreign --enable-native-access=ALL-UNNAMED</option>                                        
+                                <option>--add-modules java.se --enable-native-access=ALL-UNNAMED</option>                                        
                                 <option>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</option>                                        
                                 <option>--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED</option>                                                                                  
                                 <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>                                                                                
@@ -472,9 +476,10 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.8.1</version>
                     <configuration>
-                        <release>${maven.compiler.target}</release>   
+                        <enablePreview>true</enablePreview>
                         <fork>true</fork>
                         <compilerArgs>
+                            <arg>--enable-preview</arg>
                             <arg>-J--illegal-access=permit</arg>                               
                         </compilerArgs>                                     
                     </configuration>
